clusters/prod/apps/chatbot/manifests/deployment.yaml
# Chatbot Deployment Manifest
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot
  labels:
    app: chatbot
    component: service
    tier: backend
  namespace: smart-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
        component: service
        tier: backend
    spec:
      imagePullSecrets:
        - name: docker.io
      containers:
        - name: chatbot
          image: mangale/smart-ai:2.4.35 # {"$imagepolicy": "kommander-flux:smart-ai"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "0.5"
              memory: "256Mi"
            requests:
              cpu: "0.2"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
